res/examples/invalid/call_noncallable_number.eg
12345();

// out: TypeError: number is not callable